--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ django-allauth==0.54.0
 django-crispy-forms==2.0
 django-filter==23.2
 idna==3.4
+python=3.2.0
 oauthlib==3.2.2
 Pillow==10.0.0
 pycparser==2.21
